--- a/test/Bee.Abp.Localozation.Tests/Bee.Abp.Localozation.Tests.csproj
+++ b/test/Bee.Abp.Localozation.Tests/Bee.Abp.Localozation.Tests.csproj
@@ -5,7 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace />
         <IsPackable>false</IsPackable>
-        <AssemblyName>Bee.Abp.Tests</AssemblyName>
+        <AssemblyName>Bee.Abp.Localozation.Tests</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
