--- a/src/Bee.Abp/Bee.Abp.Localozation/Bee.Abp.Localozation.csproj
+++ b/src/Bee.Abp/Bee.Abp.Localozation/Bee.Abp.Localozation.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <NoWarn>$(NoWarn);CS1591;NU1603</NoWarn>
         <AssemblyName>Bee.Abp.Localization</AssemblyName>
         <RootNamespace />
