--- a/src/Bee.Abp/Bee.Abp/Bee.Abp.csproj
+++ b/src/Bee.Abp/Bee.Abp/Bee.Abp.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <NoWarn>$(NoWarn);CS1591;NU1603</NoWarn>
         <AssemblyName>Bee.Abp</AssemblyName>
         <RootNamespace />
@@ -33,6 +33,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Bee\Bee\Bee.csproj" />
       <ProjectReference Include="..\Bee.Abp.Localozation\Bee.Abp.Localozation.csproj" />
     </ItemGroup>
 
