--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -14,4 +14,5 @@ jobs:
     - name: Deploy docs 🚀
       uses: mhausenblas/mkdocs-deploy-gh-pages@master
       env:
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}      
         CONFIG_FILE: docs/mkdocs.yml
