--- a/sample/Bee.Abp/Bee.Abp.AspNetCore.ApmAll.SampleA/Bee.Abp.AspNetCore.ApmAll.SampleA.csproj
+++ b/sample/Bee.Abp/Bee.Abp.AspNetCore.ApmAll.SampleA/Bee.Abp.AspNetCore.ApmAll.SampleA.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Serilog.Sinks.Async" />
     <PackageReference Include="Serilog.Sinks.Elasticsearch" />
     <PackageReference Include="Elastic.CommonSchema.Serilog" />
+    
+    <PackageReference Include="Hangfire.Redis.StackExchange" Version="1.8.5" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.7.30" />
   </ItemGroup>
 
   <ItemGroup>
