--- a/sample/Bee.Abp/Bee.Abp.AspNetCore.ApmAll.SampleA/appsettings.json
+++ b/sample/Bee.Abp/Bee.Abp.AspNetCore.ApmAll.SampleA/appsettings.json
@@ -18,7 +18,8 @@
     "CloudProvider": "none"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=localhost;Database=SampleA;uid=root;pwd=1q2w3E*;charset=utf8mb4;Allow User Variables=true;"
+    "Default": "Data Source=localhost;Database=SampleA;uid=root;pwd=1q2w3E*;charset=utf8mb4;Allow User Variables=true;",
+    "Hangfire": "localhost"
   },
   "Redis": {
     "IsEnabled": "true",
