--- a/sample/Bee/Bee.Hangfire.Diagnostics.Sample/Bee.Hangfire.Diagnostics.Sample.csproj
+++ b/sample/Bee/Bee.Hangfire.Diagnostics.Sample/Bee.Hangfire.Diagnostics.Sample.csproj
@@ -10,8 +10,8 @@
     <ItemGroup>
       
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-        <PackageReference Include="Hangfire.Redis.StackExchange" Version="1.8.5" />
-        <PackageReference Include="Hangfire.AspNetCore" Version="1.7.30" />
+        <PackageReference Include="Hangfire.Redis.StackExchange" />
+        <PackageReference Include="Hangfire.AspNetCore"  />
     </ItemGroup>
 
     <ItemGroup>
