--- a/src/Bee/Bee.Apm.Hangfire/Bee.Apm.Hangfire.csproj
+++ b/src/Bee/Bee.Apm.Hangfire/Bee.Apm.Hangfire.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <AssemblyName>Bee.Apm.Hangfire</AssemblyName>
+        <AssemblyName>YHGlobal.Bee.Apm.Hangfire</AssemblyName>
         <RootNamespace />
     </PropertyGroup>
 
