--- a/src/Bee/Bee.Apm/Bee.Apm.csproj
+++ b/src/Bee/Bee.Apm/Bee.Apm.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
         <NoWarn>$(NoWarn);CS1591;NU1603</NoWarn>
-        <AssemblyName>Bee.Apm</AssemblyName>
+        <AssemblyName>YHGlobal.Bee.Apm</AssemblyName>
         <RootNamespace />
     </PropertyGroup>
 
