--- a/src/Bee/Bee.Hangfire.Diagnostics/Bee.Hangfire.Diagnostics.csproj
+++ b/src/Bee/Bee.Hangfire.Diagnostics/Bee.Hangfire.Diagnostics.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <AssemblyName>Bee.Hangfire.Diagnostics</AssemblyName>
+        <AssemblyName>YHGlobal.Bee.Hangfire.Diagnostics</AssemblyName>
         <RootNamespace />
     </PropertyGroup>
 
