--- a/sample/Bee/Bee.Apm.AspNetCore.SampleA/Bee.Apm.AspNetCore.SampleA.csproj
+++ b/sample/Bee/Bee.Apm.AspNetCore.SampleA/Bee.Apm.AspNetCore.SampleA.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
